--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <nav>
                 <div class="logo js-scroll-trigger">
-                    <a href="."> <img src="/images/casologo.svg" alt="CASO Logo"></a>
+                    <a href="."> <img src="images/casologo.svg" alt="CASO Logo"></a>
                 </div>
                 <input type="checkbox" id="menu-toggle">
                 <label for="menu-toggle" class="menu-icon">&#9776;</label>
