--- a/index.html
+++ b/index.html
@@ -24,8 +24,21 @@
                 <div class="logo js-scroll-trigger">
                     <a href="."> <img src="images/casologo.svg" alt="CASO Logo"></a>
                 </div>
+
+              
+
+                <!-- <input type="checkbox" id="menu-toggle">
+                <label for="menu-toggle" class="menu-icon">&#9776;</label> -->
+
+              
                 <input type="checkbox" id="menu-toggle">
-                <label for="menu-toggle" class="menu-icon">&#9776;</label>
+<label class="menu-icon" for="menu-toggle">
+  <div class="bar"></div>
+  <div class="bar"></div>
+  <div class="bar"></div>
+</label>
+
+
                 <ul class="menu">
                     <li><a href="#about" class="js-scroll-trigger">About</a></li>
                     <li><a href="#experience" class="js-scroll-trigger">Experience</a></li>
@@ -203,37 +216,43 @@
                     <div>
                         <div class="member">
                             <img src="images/Maskgroup.png" alt="team">
-                            Jose Luis Caso
+                           <h4>Jose Luis Caso</h4> 
+                            <span>General Manager</span>
                         </div>
                     </div>
                     <div>
                         <div class="member">
                             <img src="images/Maskgroup-2.png" alt="team">
-                            Lee Reyes
+                             <h4>Lee Reyes</h4>
+                            <span>Administrative Services Manager</span>
                         </div>
                     </div>
                     <div>
                         <div class="member">
                             <img src="images/Maskgroup-3.png" alt="team">
-                            Carlos Jasso
+                             <h4>Carlos Jasso</h4>
+                            <span>Program Manager</span>
                         </div>
                     </div>
                     <div>
                         <div class="member">
                             <img src="images/Maskgroup.png" alt="team">
-                            Jose Luis Caso
+                           <h4>Jose Luis Caso</h4> 
+                            <span>General Manager</span>
                         </div>
                     </div>
                     <div>
                         <div class="member">
-                            <img src="images/Maskgroup.png" alt="team">
-                            Jose Luis Caso
+                            <img src="images/Maskgroup-2.png" alt="team">
+                             <h4>Lee Reyes</h4>
+                            <span>Administrative Services Manager</span>
                         </div>
                     </div>
                     <div>
                         <div class="member">
-                            <img src="images/Maskgroup.png" alt="team">
-                            Jose Luis Caso
+                            <img src="images/Maskgroup-3.png" alt="team">
+                             <h4>Carlos Jasso</h4>
+                            <span>Program Manager</span>
                         </div>
                     </div>
 
