--- a/index.html
+++ b/index.html
@@ -15,28 +15,24 @@
 
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
+
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
-    <header class="header fixed-top" id="mainNav">
+    <header class="header" id="mainNav">
         <div class="container">
             <nav>
                 <div class="logo js-scroll-trigger">
                     <a href="."> <img src="images/casologo.svg" alt="CASO Logo"></a>
                 </div>
 
-              
-
-                <!-- <input type="checkbox" id="menu-toggle">
-                <label for="menu-toggle" class="menu-icon">&#9776;</label> -->
-
-              
                 <input type="checkbox" id="menu-toggle">
-<label class="menu-icon" for="menu-toggle">
-  <div class="bar"></div>
-  <div class="bar"></div>
-  <div class="bar"></div>
-</label>
+                <label class="menu-icon" for="menu-toggle">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </label>
 
 
                 <ul class="menu">
@@ -56,8 +52,8 @@
             <div class="container">
                 <div class=" verticalflip">
                     <h1>Transforming &nbsp; <b><span>Grants</span>
-                        <span>Litigation</span>
-                        <span>Government&nbsp;Affairs</span></b><br>
+                            <span>Litigation</span>
+                            <span>Government&nbsp;Affairs</span></b><br>
                         into Legal Triumphs.
                     </h1>
                 </div>
@@ -66,19 +62,21 @@
 
 
 
-        <section class="about center" id="about">
+        <section class="about center " id="about" data-aos="fade-up">
             <div class="container">
-                <h2>Who We Are</h2>
-                <p>CLF Enterprise is an 8(a) certified firm located in Edinburg, Texas. Our firm specializes in
+                <h2 class="autoShow">Who We Are</h2>
+                <p class="autoShow">CLF Enterprise is an 8(a) certified firm located in Edinburg, Texas. Our firm
+                    specializes in
                     providing a
                     range of support services, grant management, and marketing communication solutions to both private
                     and
                     federal government entities.</p> <br>
-                <p>Our firm specializes in providing a range of support services, grant management, and marketing
+                <p class="autoShow">Our firm specializes in providing a range of support services, grant management, and
+                    marketing
                     communication solutions to both private and
                     federal government entities.</p>
 
-                <div class="stats">
+                <div class="stats autoShow">
 
                     <div class="counter-container">
                         <div class="counter count">450</div>
@@ -102,7 +100,7 @@
 
 
 
-        <section class="experience center" id="experience">
+        <section class="experience center" id="experience" data-aos="fade-up">
 
             <div class="container">
                 <h2>Prior Experience</h2>
@@ -167,11 +165,11 @@
         </section>
 
 
-        <section class="services center" id="services">
+        <section class="services center autoShow" id="services">
             <div class="container">
-                <h2>Our Services</h2>
+                <h2 data-aos="fade-up">Our Services</h2>
                 <div class="service-cards">
-                    <div class="card">
+                    <div class="card" data-aos="zoom-in">
                         <i><img src="images/union.svg" alt="grants-icon"></i>
                         <h3>Grants</h3>
                         <p>In addition to support services, CLF Enterprise specializes in grant management, which
@@ -181,7 +179,7 @@
                             in grant research, proposal development, grant administration, compliance, and reporting,
                             ensuring that our clients optimizegrants and maximizing their utilization.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" data-aos="zoom-in">
                         <i><img src="images/union.svg" alt="grants-icon"></i>
                         <h3>Litigation</h3>
                         <p>In addition to support services, CLF Enterprise specializes in grant management, which
@@ -191,7 +189,7 @@
                             in grant research, proposal development, grant administration, compliance, and reporting,
                             ensuring that our clients optimizegrants and maximizing their utilization.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" data-aos="zoom-in">
                         <i><img src="images/union.svg" alt="grants-icon"></i>
                         <h3>Government Affairs</h3>
 
@@ -207,7 +205,7 @@
         </section>
 
 
-        <section class="team center" id="team">
+        <section class="team center" id="team" data-aos="fade-up">
 
             <div class="container">
                 <h2>Executive Team</h2>
@@ -216,42 +214,42 @@
                     <div>
                         <div class="member">
                             <img src="images/Maskgroup.png" alt="team">
-                           <h4>Jose Luis Caso</h4> 
+                            <h4>Jose Luis Caso</h4>
                             <span>General Manager</span>
                         </div>
                     </div>
                     <div>
                         <div class="member">
                             <img src="images/Maskgroup-2.png" alt="team">
-                             <h4>Lee Reyes</h4>
+                            <h4>Lee Reyes</h4>
                             <span>Administrative Services Manager</span>
                         </div>
                     </div>
                     <div>
                         <div class="member">
                             <img src="images/Maskgroup-3.png" alt="team">
-                             <h4>Carlos Jasso</h4>
+                            <h4>Carlos Jasso</h4>
                             <span>Program Manager</span>
                         </div>
                     </div>
                     <div>
                         <div class="member">
                             <img src="images/Maskgroup.png" alt="team">
-                           <h4>Jose Luis Caso</h4> 
+                            <h4>Jose Luis Caso</h4>
                             <span>General Manager</span>
                         </div>
                     </div>
                     <div>
                         <div class="member">
                             <img src="images/Maskgroup-2.png" alt="team">
-                             <h4>Lee Reyes</h4>
+                            <h4>Lee Reyes</h4>
                             <span>Administrative Services Manager</span>
                         </div>
                     </div>
                     <div>
                         <div class="member">
                             <img src="images/Maskgroup-3.png" alt="team">
-                             <h4>Carlos Jasso</h4>
+                            <h4>Carlos Jasso</h4>
                             <span>Program Manager</span>
                         </div>
                     </div>
@@ -262,7 +260,7 @@
             </div>
         </section>
 
-        <section class="testimonial center" id="testimonials">
+        <section class="testimonial center" id="testimonials" data-aos="fade-up">
             <div class="container">
 
                 <h2>Testimonials</h2>
@@ -314,7 +312,7 @@
 
         </section>
 
-        <section class="contact-form center" id="booknow">
+        <section class="contact-form center" id="booknow" data-aos="fade-up">
             <div class="container">
                 <h2>Make an Appointment</h2>
                 <form class="form">
@@ -385,6 +383,8 @@
 
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script>
 
@@ -463,7 +463,12 @@
 
         // counter script end
 
-  
+
+        AOS.init({
+            duration: 1200,
+        })
+
+
     </script>
 </body>
 
